--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-tsparticles": "^2.9.3",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
