--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-tsparticles": "^2.9.3",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "tsparticles": "^2.10.0",
+    "tsparticles-slim": "^2.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
