--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-phone-number-input": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-tsparticles": "^2.9.3",
     "swiper": "^9.3.2",
