--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-phone-number-input": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-tsparticles": "^2.9.3",
